Date: Sat, 20 Feb 2021 11:52:37 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.6.0 2021-02-XX Marc-Etienne Vargenau ==

Major release:
* PHP 7 compatible (works from PHP 5.3.3 to PHP 7)
* Full HTML 5: Add HTML 5 <main> <header> <footer> <nav> in all themes. Add ARIA roles.
* Flash is dead
* Internet Explorer is dead

=== Fixes ===
* Make function IsSafeURL more strict
* Make XHTML ZIP Snapshot work again (broken since ~PhpWiki 1.5.3)
* It was possible to rename a page to a name with illegal characters, like ~[~]
* Remove wrong calls to setTightness in ##lib/~InlineParser.php## (bug reported by Harold Hallikainen)
* Importing a ZIP from an old wiki in Latin 1 (ISO 8859-1) failed. Reported by Frank Michael.
* Better check arguments for ~GoogleMaps plugin
* Security fixes

=== Changes ===
* Add new button in Edit Toolbar: convert Tab Separated Values to Wikicreole table
* Update jQuery to 2.2.4
* Pear: use ##mysqli## instead of ##mysql##
* Update PEAR.php to release 1.10.12
* Update Pear DB library to 1.10.0
* Update Pear Cache library to 1.5.6
* Replace ##ereg## functions
* Update Adodb to version 5.20.19
* Update ASCIIMathPHP to version 2.1 (from Zefling/ASCIIMathPHP on github.com)
* Update highlight.js to version 9.15.6
* Allow Wikicreole syntax for plugins in theme templates
* Valid HTML5 and CSS3 logos (in debug mode)
* Better is_localhost() function (allow IPv6, allow Windows IIS). Patch by Thierry Nabeth.
* Remove Fusionforge-specific files (g view.php wikiadmin.php wikilist.php)
* Remove USE_SAFE_DBSESSION (always true)
* PDO patch by Sébastien Le Callonnec
* Updated pgsrc pages in all languages
* Adding SPDX-License-Identifier in PHP source files

===  Plugins ===
* ~UpLoad plugin: put date and author in history