@@ -65,16 +65,6 @@ class WikiPlugin_MediawikiTable
         return array();
     }
 
-    function getWikiPageLinks($argstr, $basepage)
-    {
-        global $backlinks;
-        if (empty($backlinks)) {
-            global $request;
-            $this->run($request->_dbi, $argstr, $request, $basepage);
-        }
-        return $backlinks;
-    }
-
     /**
      * @param WikiDB $dbi
      * @param string $argstr
@@ -84,10 +74,6 @@ class WikiPlugin_MediawikiTable
      */
     function run($dbi, $argstr, &$request, $basepage)
     {
-        global $backlinks;
-
-        $backlinks = array();
-
         include_once 'lib/BlockParser.php';
 
         // We allow the compact Mediawiki syntax with:
